@@ -852,6 +852,11 @@
         name = "Ely Levy (Nakee)"
     [/entry]
     [entry]
+	name = "Etkin Baris Ozgul (pokhbocee)"
+	comment = "Lua AI"
+	ircuser = "pokhbocee"
+    [/entry]
+    [entry]
         name = "Fedor Khod'kov (teddy/fkhodkov)"
     [/entry]
     [entry]
